# fast_data_loader

./: README.md  pyproject.toml
.github/workflows/: build.yml
src/fast_data_loader/: main.py  scanner.py  utils.py
